--- a/src/Umbraco.Web.UI/Web.config
+++ b/src/Umbraco.Web.UI/Web.config
@@ -49,6 +49,7 @@
         <add key="Umbraco.ModelsBuilder.Enable" value="true"/>
         <add key="Umbraco.ModelsBuilder.ModelsMode" value="PureLive"/>
         <add key="Wepsys.Plugin.PasswordExpiration.ExpirationTimeInDays" value="90"/>
+        <add key="Wepsys.Plugin.PasswordExpiration.PasswordChangeViewFullPath" value="ChangePassword"/>
         <add key="Umbraco.TestData.Enabled" value="true"/>
     </appSettings>
 
