--- a/src/Wepsys.Plugin.PasswordExpiration/Wepsys.Plugin.PasswordExpiration.csproj
+++ b/src/Wepsys.Plugin.PasswordExpiration/Wepsys.Plugin.PasswordExpiration.csproj
@@ -54,6 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\PasswordValidityError.cs" />
+    <Compile Include="Helpers\PasswordValidityErrorMessages.cs" />
+    <Compile Include="Models\PasswordChangeRequestModel.cs" />
+    <Compile Include="Models\PasswordChangeResponseModel.cs" />
     <Compile Include="PasswordExpirationController.cs" />
     <Compile Include="PasswordExpirationPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
